feat(public\manifest.json): настраивает файл

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,29 @@
 {
 	"name": "Rick And Morty",
-	"short_name": "RickAndMorty",
+	"short_name": "Rick&Morty",
 	"start_url": "/public/index.html",
+	"id": "/public/index.html",
 	"display": "standalone",
+	"display_override": ["window-controls-overlay"],
 	"background_color": "#fafafa",
-	"theme_color": "#1976d2",
+	"theme_color": "#084949",
 	"orientation": "portrait-primary",
+	"screenshots": [
+		{
+			"src": "assets/screenshots/screenshot-1900x920.png",
+			"sizes": "1900x920",
+			"type": "image/png",
+			"form_factor": "wide",
+			"platform": "web"
+		},
+		{
+			"src": "assets/screenshots/screenshot-375x667.png",
+			"sizes": "375x667",
+			"type": "image/png",
+			"form_factor": "narrow",
+			"platform": "web"
+		}
+	],
 	"icons": [
 		{
 			"src": "assets/icons/icon-48x48.png",
@@ -41,7 +59,7 @@
 			"src": "assets/icons/icon-192x192.png",
 			"sizes": "192x192",
 			"type": "image/png",
-			"purpose": "any maskable"
+			"purpose": "maskable"
 		},
 		{
 			"src": "assets/icons/icon-384x384.png",
