--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "rs-react-optimization-pwa",
 	"version": "0.1.0",
 	"private": true,
+	"page": "https://rickandmorty-c6ac8.web.app/#",
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
